[vr] Get incognito state from tab instead of the web content.

Also fixes the wrong color scheme on the incognito NTP.

Bug: 743253
Change-Id: I86428d79353ca9d7668632dac3e93ea9e1d3e316