chrome/browser/android/tab_android.h
@@ -91,6 +91,8 @@ class TabAndroid : public CoreTabHelperDelegate,
 
   int GetAndroidId() const;
   int GetSyncId() const;
+  bool IsIncognito() const;
+  bool IsNativePage() const;
 
   // Return the tab title.
   base::string16 GetTitle() const;
