chrome/android/java/src/org/chromium/chrome/browser/tab/Tab.java
@@ -995,6 +995,7 @@ public class Tab
         return mId;
     }
 
+    @CalledByNative
     public boolean isIncognito() {
         return mIncognito;
     }
@@ -1026,6 +1027,7 @@ public class Tab
     /**
      * @return Whether or not the {@link Tab} represents a {@link NativePage}.
      */
+    @CalledByNative
     public boolean isNativePage() {
         return mNativePage != null;
     }
